Updated HTML added submit & play again buttons

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <title>NFL Trivia Game</title>
 </head>
 <body>
- 
-  <div id="Game">
     <h1> NFL Trivia Game</h1> 
+  <div id="Gamequestions">
+    <input id="text" id="answer">
+    <button onclick="CheckAnswer()">Submit</button>
+    <div id="score"></div>
+    <button onclick="playagain()"> Play Again</button>
     
+
   </div> 
 </body>
 <script src="game.js"></script>
