added note to my code

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <h1> NFL Trivia Game</h1> 
   <div id="Gamequestions">
     <input id="text" id="answer">
+    <!-- added submit button -->
     <button onclick="CheckAnswer()">Submit</button>
     <div id="score"></div>
+    <!-- added plsay again submit button -->
     <button onclick="playagain()"> Play Again</button>
     
 
