--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="game.css">
+    <!-- <link rel="stylesheet" href="game.css"> -->
     <title>NFL Trivia Game</title>
 </head>
 <body>
@@ -20,5 +20,6 @@
 
   </div> 
 </body>
+<script></script>
 <script src="game.js"></script>
 </html>
