added countdown timer and display multiple choice

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div id="gameday">
       <h1>Kinson's NFL Trivia Game</h1>
       <div id="question"></div>
-      <div id="choices"></div>
-      <input type="text" id="answer" />
-      <button onclick="checkAnswer()">Submit</button>
-      <div id="score"></div>
+	<div id="choices"></div>
+	<div id="timer">Time Left: 60 seconds</div>
+	<button onclick="checkAnswer()">Submit Answer</button>
+      <div id="score">Score:</div>
       <button onclick="playAgain()">Play Again</button>
       <script src="ft.js"></script>
     </div>
